# lwiot-app-esp32

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  setup.py
app/: main_thread.cpp
cmake/: esp32.cmake
main/: component.mk  main.c
