cmake_minimum_required(VERSION 3.0.0)
project(esp32_test)

include(CMakeToolsHelpers OPTIONAL)
include(CheckIncludeFiles)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ESP32_CXX_FLAGS}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ESP32_C_FLAGS}")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 11)

CHECK_INCLUDE_FILES (stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILES (stdio.h  HAVE_STDIO_H)
CHECK_INCLUDE_FILES (stdint.h HAVE_STDINT_H)
CHECK_INCLUDE_FILES (stdarg.h HAVE_STDARG_H)
CHECK_INCLUDE_FILES (assert.h HAVE_ASSERT_H)
CHECK_INCLUDE_FILES (string.h HAVE_STRING_H)
CHECK_INCLUDE_FILES (time.h HAVE_TIME_H)
CHECK_INCLUDE_FILES (Winsock2.h HAVE_WINSOCK_H)
CHECK_INCLUDE_FILES (arpa/inet.h HAVE_INET_H)

include_directories(${ESP32_INCLUDE_DIRECTORIES})

add_custom_target(
	link
	COMMAND touch main/main.c
	COMMAND LWIOT_INSTALL_DIR=${LWIOT_INSTALL_PATH} BUILD_TYPE=${CMAKE_BUILD_TYPE} make
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

add_custom_target(
	flash
	COMMAND touch main/main.c
	COMMAND LWIOT_INSTALL_DIR=${LWIOT_INSTALL_PATH} BUILD_TYPE=${CMAKE_BUILD_TYPE} make all flash
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

add_custom_target(
	debug
	COMMAND touch main/main.c
	COMMAND LWIOT_INSTALL_DIR=${LWIOT_INSTALL_PATH} BUILD_TYPE=${CMAKE_BUILD_TYPE} make all flash monitor
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

add_custom_target(
	monitor
	COMMAND LWIOT_INSTALL_DIR=${LWIOT_INSTALL_PATH} BUILD_TYPE=${CMAKE_BUILD_TYPE} make monitor
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

SET(SOURCES
	app/main_thread.cpp
)

add_library(app ${SOURCES})

